--- a/src/templates/pages/html/nuevaOR.html
+++ b/src/templates/pages/html/nuevaOR.html
@@ -61,6 +61,6 @@
             </div>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="/src/static/scripts/js/nuevaOR.js"></script>
 </body>
 </html>
