--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="logo">
             <i class="fas fa-hands-helping"></i>
-            <h1><a href="/src/templates/index.html" style="text-decoration: none; color: inherit;">Conexión
+            <h1><a href="/src/templates/pages/html/update_files.html" style="text-decoration: none; color: inherit;">Conexión
                     Solidaria</a></h1>
         </div>
         <p>Uniendo donantes con causas importantes</p>
