--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="logo">
             <i class="fas fa-hands-helping"></i>
-            <h1><a href="/src/templates/pages/html/update_files.html" style="text-decoration: none; color: inherit;">Community</a></h1>
+            <h1><a href="/src/templates/index.html" style="text-decoration: none; color: inherit;">Community</a></h1>
         </div>
         <p>Uniendo donantes con causas importantes</p>
     </header>
@@ -21,25 +21,25 @@
     <nav class="nav">
         <a href="/src/templates/index.html" data-tooltip="Página principal del sitio" class="active"><i
                 class="fas fa-home"></i> Inicio</a>
-        <a href="/src/templates/pages/html/proyectos.html" data-tooltip="Explora todos los proyectos disponibles"><i
+        <a href="/src/templates/pages/proyectos.html" data-tooltip="Explora todos los proyectos disponibles"><i
                 class="fas fa-project-diagram"></i> Proyectos</a>
-        <a href="/src/templates/pages/html/organizaciones.html"
+        <a href="/src/templates/pages/organizaciones.html"
             data-tooltip="Conoce las organizaciones que están haciendo la diferencia"><i class="fas fa-building"></i>
             Organizaciones</a>
-        <a href="/src/templates/pages/html/donar.html" data-tooltip="Contribuye a las causas que te importan"><i
+        <a href="/src/templates/pages/donar.html" data-tooltip="Contribuye a las causas que te importan"><i
                 class="fas fa-donate"></i> Donar</a>
-        <a href="/src/templates/pages/html/recibir.html" data-tooltip="Conecta con quienes ofrecen ayudas"><i
+        <a href="/src/templates/pages/recibir.html" data-tooltip="Conecta con quienes ofrecen ayudas"><i
                 class="fas fa-hand-holding-heart"></i> Recibir</a>
-        <a href="/src/templates/pages/html/perfil.html" data-tooltip="Gestiona tu perfil y tus donaciones"><i
+        <a href="/src/templates/pages/perfil.html" data-tooltip="Gestiona tu perfil y tus donaciones"><i
                 class="fas fa-user"></i> Mi Perfil</a>
     </nav>
     <div class="container">
         <div class="dashboard">
-            <a href="/src/templates/pages/html/proyectos.html" class="card clickable">
+            <a href="/src/templates/pages/proyectos.html" class="card clickable">
                 <h3>Proyecto Activos</h3>
                 <p id="activeProjects">1</p>
             </a>
-            <a href="/src/templates/pages/html/perfil.html#mis-organizaciones" class="card clickable">
+            <a href="/src/templates/pages/perfil.html#mis-organizaciones" class="card clickable">
                 <h3>Organizaciones Registradas</h3>
                 <p id="registeredOrgs">0</p>
             </a>
