--- a/src/templates/pages/perfil.html
+++ b/src/templates/pages/perfil.html
@@ -19,11 +19,11 @@
 
     <nav class="nav">
         <a href="/src/templates/index.html" data-tooltip="Página principal del sitio" ><i class="fas fa-home"></i> Inicio</a>
-        <a href="/src/templates/pages/html/proyectos.html" data-tooltip="Explora todos los proyectos disponibles"><i class="fas fa-project-diagram"></i> Proyectos</a>
-        <a href="/src/templates/pages/html/organizaciones.html" data-tooltip="Conoce las organizaciones que están haciendo la diferencia"><i class="fas fa-building"></i> Organizaciones</a>
-        <a href="/src/templates/pages/html/donar.html" data-tooltip="Contribuye a las causas que te importan"><i class="fas fa-donate"></i> Donar</a>
-        <a href="/src/templates/pages/html/recibir.html" data-tooltip="Conecta con quienes ofrecen ayudas"><i class="fas fa-hand-holding-heart"></i> Recibir</a>
-        <a href="/src/templates/pages/html/perfil.html" data-tooltip="Gestiona tu perfil y tus donaciones" class="active"><i class="fas fa-user"></i> Mi Perfil</a>
+        <a href="/src/templates/pages/proyectos.html" data-tooltip="Explora todos los proyectos disponibles"><i class="fas fa-project-diagram"></i> Proyectos</a>
+        <a href="/src/templates/pages/organizaciones.html" data-tooltip="Conoce las organizaciones que están haciendo la diferencia"><i class="fas fa-building"></i> Organizaciones</a>
+        <a href="/src/templates/pages/donar.html" data-tooltip="Contribuye a las causas que te importan"><i class="fas fa-donate"></i> Donar</a>
+        <a href="/src/templates/pages/recibir.html" data-tooltip="Conecta con quienes ofrecen ayudas"><i class="fas fa-hand-holding-heart"></i> Recibir</a>
+        <a href="/src/templates/pages/perfil.html" data-tooltip="Gestiona tu perfil y tus donaciones" class="active"><i class="fas fa-user"></i> Mi Perfil</a>
     </nav>
 
     <main class="container">
@@ -31,11 +31,11 @@
             <img src="/src/static/images/perfilimg.jpg" alt="Foto de perfil" class="profile-picture">
             <h2 id="userName">Nombre del Usuario</h2>
             <div class="login-link">
-                <a href="/src/templates/pages/html/login.html">
+                <a href="/src/templates/pages/login.html">
                     <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
                 </a>
                 <span class="separator">|</span>
-                <a href="/src/templates/pages/html/registro.html">
+                <a href="/src/templates/pages/registro.html">
                     <i class="fas fa-user-plus"></i> Registrarse
                 </a>
             </div>
@@ -65,7 +65,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- El historial de donaciones se cargará dinámicamente -->
+                    <!-- El historial de nes se cargará dinámicamente -->
                 </tbody>
             </table>
         </div>
