--- a/src/templates/pages/proyectos.html
+++ b/src/templates/pages/proyectos.html
@@ -36,7 +36,7 @@
     </nav>
 
     <main class="container">
-        <a href="/src/templates/pages/nuevoProyecto.html" class="btn-crear">
+        <a href="/nuevoProyecto" class="btn-crear">
             <i class="fas fa-plus"></i>
             Crear proyecto
         </a>
